[package]
name = "fenrir-module-kit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Helpers for Fenrir modules (DB connector client, env helpers, token exchange)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5"
base64 = "0.21"
time = { version = "0.3", features = ["formatting", "parsing"] }
